# jgs-sysmlv2-api-mcp

./: .gitignore  CHANGELOG.md  CITATION.cff  COPYRIGHT  LICENSE  NOTICE  README.md  RELEASE-INFO.txt  SECURITY.md  gemini-extension.json  glama.json  pyproject.toml  smithery.yaml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: validate.yml
docs/: TOOL-REFERENCE.md  configuration.md  index.html  install.md  licensing.md  tool-reference.html  usage.md
examples/: mcp.json.example
scripts/: check_release.py
src/jgs_sysmlv2_api_mcp/: __main__.py  api_client.py  config.py  ids.py  licence.py  logging_setup.py  metrics.py  (+4 more)
tests/: __init__.py  conftest.py  test_api_client.py  test_author_tools.py  test_commit_tools.py  test_config.py  test_ids.py  test_integration_pilot.py  test_licence.py  test_licence_gate.py  test_logging_stdout_clean.py  test_metrics.py  test_nav_tools.py  test_read_tools.py  test_reconcile.py  test_server_registration.py  test_session_stage_merge.py  test_session_token.py  test_spike_t1_endpoints.py  test_spike_t2_endpoints.py  test_spike_t3_endpoints.py  test_spike_t4_endpoints.py  test_spike_write_roundtrip.py  test_t1_api_client.py  test_t1_nav_tools.py  test_t1_read_tools.py  test_t2_api_client.py  test_t2_branch_tools.py  test_t2_session.py  test_t3_api_client.py  test_t3_project_tools.py  test_t3_reconcile.py  test_t4_author_tools.py  test_t4_session.py  test_transport_ssrf.py
(+6 files in other folders)
